--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-appsettings/
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
